Added ws messages. Enabled support for switch.